--- a/Styles/main_style.css
+++ b/Styles/main_style.css
@@ -55,7 +55,7 @@ header{
  position: relative;
 }
 
-.header__nav__container{
+.header__nav_container{
  width: auto;
 }
 
@@ -74,7 +74,7 @@ header{
  background-color: black;
 }
 
-.header__background__container{
+.header__background_container{
  position: relative;
 }
 .header__border{
@@ -86,7 +86,7 @@ header{
  border-top: 3px solid var(--Black_);
  transform: rotate(-15deg);
 }
-.profilePicture__container{
+.profilePicture_container{
  width: auto;
  position: absolute;
  top:70px;
@@ -101,6 +101,18 @@ header{
  width:100%;
  height: 100%;
 }
+
+/* --- Header Background */
+.header__back_container{}
+
+.back__box__top{}
+.back__box__bottom{}
+.box__top{
+ width: ;
+}
+.box__bottom{}
+
+
 /* css Global */
 .background_test{
  background-color: black;
