--- a/Styles/main_style.css
+++ b/Styles/main_style.css
@@ -2,14 +2,16 @@
 @import url(./reset.css);
 @import url(./fontface.css);
 @import url(./media.css);
-@import url(../Fonts/Awsome/all.css);
+/* @import url(../Fonts/Awsome/all.css); */
 
 /* css Root */
+/* viw Color Pallete */
+
 :root{
  --White_: #ffffff;
  --Gray_Light: #b4b4b4;
  --Gray_: #8f8f8f;
- --Gray_Dark: #636363;
+ --head_border: #636363;
 --Black_:#000;
 
  --Green_: #94D2BD;
@@ -45,9 +47,8 @@ direction: rtl;
 
 
 
-/* css Content */
+/* css Header */
 
-/* --- Header */
 header{
  width: auto;
  height:300px;
@@ -55,65 +56,161 @@ header{
  position: relative;
 }
 
-.header__nav_container{
+/* --- Header Navbar */
+
+.header__nav{
  width: auto;
-}
-
-.nav{
- width: 300px;
- height: 30px;
  position: relative;
 }
 
-.nav__icon{
+.nav_container{
+ width: auto;
  position: absolute;
- top: 10px;
- right:10px;
- width: 30px;
- height: 30px;
- background-color: black;
+ top: 15px;
+ right: 20px;
+ z-index: 0;
+}
+.nav__icon_toggle{
+ width: 50px;
+ height: 50px;
+}
+.icon_toggle_container{
+ width: 100%;
+ height: 100%;
 }
 
-.header__background_container{
- position: relative;
+.icon_toggle{
+font-size: 2rem;
 }
-.header__border{
- width: 340px;
- height: 3px;
- position: absolute;
- top: 150px;
- left: -5px;
- border-top: 3px solid var(--Black_);
- transform: rotate(-15deg);
+.icon_toggle::before{
+content: "\f0c9";
 }
+
+/* --- Header Profile Picture */
+
 .profilePicture_container{
  width: auto;
+ position: relative;
+}
+
+.profilePicture__img{
+ width: 130px;
+ height: 130px ;
  position: absolute;
  top:70px;
  left: 35px;
 }
-
-.profilePicture{
- width: 130px;
- height: 130px ;
-}
-.profilePicture__img{
+.img__container{
  width:100%;
  height: 100%;
 }
 
-/* --- Header Background */
-.header__back_container{}
+/* --- Header Back */
 
-.back__box__top{}
-.back__box__bottom{}
-.box__top{
- width: ;
+.header__back_container{
+ width:330px ;
+ height: 185px;
+ position: relative;
+ margin: 0 auto;
+ z-index: -2;
 }
-.box__bottom{}
 
+.back__box__top{
+ width: 100%;
+ height:100px;
+position: absolute;
+top: 0px;
+}
+
+.box__top{
+ width: 100%;
+ height: 100%;
+ background-color: rgba(85, 85, 85, 0.295);
+}
+.back__box__bottom{
+ width: 100%;
+ height: 85px;
+position: absolute;
+top: 100px;
+}
+.box__bottom{
+ border-top: 85px solid rgba(85, 85, 85, 0.295);
+	border-right: 330px solid transparent;
+	height: 0;
+	width: 100%;
+}
+
+.back__border_container{
+width: 100%;
+height: 180px;
+position: relative;
+z-index: 0;
+}
+.border__top{
+ width: 330px;
+ height: 3px;
+ position: absolute;
+ top: 0px;
+ left: 0px;
+ border-top: 3px solid var(--head_border);
+}
+.border__left{
+ width: 3px;
+ height: 183px;
+ position: absolute;
+ top: 0px;
+ left: 0px;
+ border-left: 3px solid var(--head_border);
+
+}
+.border__right{
+ width: 3px;
+ height: 101px;
+ position: absolute;
+ top: 0px;
+ right: 0px;
+ border-right: 3px solid var(--head_border);
+}
+
+.border__bottom{
+ width: 339px;
+ height: 3px;
+ position: absolute;
+ top: 140px;
+ left: -5px;
+ border-top: 3px solid var(--head_border);
+ transform: rotate(-14.2deg);
+}
 
 /* css Global */
+
+/* viw Font awsome */
+.fa {
+ font-family: "FontAwesome";
+ font-weight: 900;
+ display: inline-block;
+ font-style: normal;
+ font-variant: normal;
+ line-height: 1;
+ text-rendering: auto;
+}
+
+/* viw Animation */
+.pulse {
+ animation-name: pulse;
+ animation-delay:0s;
+ animation-direction: normal;
+ animation-duration:0.5s;
+ animation-iteration-count: infinite;
+ animation-timing-function: linear;
+ animation-fill-mode: forwards;
+}
+
+
+
+
+
+
 .background_test{
  background-color: black;
  height: 300px;
