--- a/Styles/media.css
+++ b/Styles/media.css
@@ -1,9 +1,29 @@
 /* css Keyframes */
+
 @keyframes pulse {
   0% {
    transform: scale(1)
   }
   50% {
    transform: scale(0.8)
+  }
+}
+
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(90deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  75% {
+    transform: rotate(270deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
